Fix overflow and create responsive design
Fix overflow and add use responsive styling to the first and second
parts of the content area.

--- a/style.css
+++ b/style.css
@@ -1,48 +1,65 @@
 body {
     display: flex;
-    width: 100%;
     height: 100vh;
+    width: 100vw;
+    overflow: auto;
+    margin: 0;
 }
 
 :root {
     font-size: 1em;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
-body ~ div {
-    display: flex;
+    --main-color: #E6E8E6;
 }
 
 .sidebar-container {
-    width: 30vh;
+    width: 30%;
+    flex-shrink: 0;
 }
 
 .sidebar-container img {
     width: 100%;
     height: 100%;
+    flex: 1 0 0;
 }
 
 .main-container {
     display: flex;
     flex-direction: column;
+    overflow: hidden;
+    flex: auto;
+}
+
+.main-container div {
+    flex: 1 1 0;
 }
 
 .intro-container {
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
-    background-color: #f1f1f1f1;
+    background-color: var(--main-color);
     height: 33vh;
     padding: 1.5em;
+
+    font-size: min(1.5em, 2vw);
+    align-items: flex-start;
+}
+
+.intro-container div {
+    justify-content: end;
+    margin-bottom: 1vh;
 }
 
 .form-main {
     display: flex;
+    flex: 0 1 0;
     flex-direction: column;
     text-align: center;
     height: 33vh;
     justify-content: center;
     align-items: center;
+
+    background-color: #F4F5F4;
 }
 
 form {
@@ -50,8 +67,14 @@ form {
     justify-content: space-around;
 }
 
+.form-main > h2 {
+    font-size: min(2em, 2vw);
+    margin: 0;
+}
+
 .input-container {
     display: flex;
+    flex: 1 1 0;
     flex-direction: column;
     text-align: left;
     justify-content: flex-start;
@@ -59,25 +82,30 @@ form {
 }
 
 .buttons-container {
-    background-color: #f1f1f1f1;
+    background-color: var(--main-color);
     height: 33vh;
 }
 
 .form-container {
     display: flex;
-    margin: 2em;
-    font-size: 1rem;
+    font-size: min(1em, 0.8vw);
     text-transform: capitalize;
+    justify-content: center;
 }
 
 .form-container input {
-    width: 300px;
-    height: 25px;
+    width: 100%;
+    height: min(25px, 3vh);
     border: 0.5px solid rgb(107, 107, 107);
 }
 
 .intro-container > div {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: flex-end;
+}
+
+.intro-container p:first-child {
+    font-weight: 600;
+    font-size: 1.25em;
 }
